// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth register endpoint only registers an email that was previously unregistered 1`] = `
Object {
  "message": "You have successfully registered to ChatApp!",
}
`;

exports[`Auth register endpoint only registers an email that was previously unregistered 2`] = `
Object {
  "errors": Array [
    Object {
      "field": "email",
      "message": "The email provided is already in use.",
    },
  ],
  "type": "register",
}
`;

exports[`Auth register endpoint returns error after failing to hash password 1`] = `
Object {
  "errors": Array [
    Object {
      "message": "There was an error registering.",
    },
  ],
  "type": "register",
}
`;
